# AnimationModelTraining

./: .gitignore  CLAUDE.md  LICENSE  README.md  paths.toml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: anim-ml-researcher.md
configs/: curve_copilot.yaml  periodic_autoencoder_pretrain.yaml  rig_propagation.yaml  server.yaml
docker/: Dockerfile.server  docker-compose.yaml
scripts/: download_100style.py  download_accad.py  download_cmu.py  generate_proto.py  prepare_dataset.py  prepare_rig_dataset.py  verify_onnx.py
src/anim_ml/: paths.py
src/anim_ml/data/: bvh_parser.py  curve_dataset.py  curve_extractor.py  dataset_100style.py  dataset_cmu.py  rig_data_generator.py  rig_dataset.py
src/anim_ml/models/: bone_encoder.py
src/anim_ml/server/: model_base.py  model_light_t2m.py  model_mock.py  motion_converter.py  service.py
tests/: test_paths.py  test_setup.py  test_timing_log.py
tests/data/: test_bvh_parser.py  test_curve_extractor.py  test_dataset_integration.py  test_rig_data_generator.py  test_rig_dataset.py
tests/fixtures/: simple.bvh  simple_zup.bvh
tests/models/: test_curve_copilot_model.py  test_curve_copilot_onnx.py  test_curve_copilot_train.py  test_periodic_autoencoder.py  test_rig_propagation_model.py  test_rig_propagation_onnx.py  test_rig_propagation_train.py
tests/server/: test_model_integration.py  test_motion_converter.py  test_proto.py  test_service.py
tests/utils/: test_batch_budget.py  test_bezier_fitter.py  test_keyframe_reducer.py  test_memory_budget.py  test_rotation.py  test_skeleton.py
(+25 files in other folders)
